PossetInterpreter/src/test/resources/syntax-errors/non-existing-childname.pos
main
(
	Test t1
	(
		firstTest[A];
	)
	'2 t2[A];
)

Test
(
	'2 first;
)

